--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -39,8 +39,8 @@
                         <div class="col-md-12 col-lg-12 col-xl-8">
                             @if (Model.Product.SellPrice != null && Model.Product.SellPrice > 0)
                             {
-                                <div class="prd_amnt">@ViewBag.CurrencySymbol@(Model.Prices.FinalSellPrice + Model.Prices.TaxAmount)<span> inc VAT</span></div>
-                                <div class="prd_amnt_excl_VAT">(@ViewBag.CurrencySymbol@Model.Prices.FinalSellPrice<span> excl VAT</span>)</div>
+                                <div class="prd_amnt">@ViewBag.CurrencySymbol@Model.Prices.FinalSellPrice<span> excl VAT</span></div>
+                                <div class="prd_amnt_incl_VAT">(@ViewBag.CurrencySymbol@(Model.Prices.FinalSellPrice + Model.Prices.TaxAmount)<span> inc VAT</span>)</div>
                                 if (Model.Product.SellPrice != Model.Prices.FinalSellPrice)
                                 {
                                     <div class="prd_amnt_RRP">RRP @ViewBag.CurrencySymbol@Model.Product.SellPrice<span> excl VAT</span></div>
