--- a/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
@@ -83,7 +83,7 @@
                                                         <div class="col-md-12 col-lg-12 col-xl-9">
                                                             @if (kitProductMaster.SellPrice != null && kitProductMaster.SellPrice > 0)
                                                             {
-                                                                <div class="prd_amnt">@ViewBag.CurrencySymbol@prices.FinalSellPrice<span> excl VAT</span></div>
+                                                                <div class="prd_amnt">@ViewBag.CurrencySymbol@prices.FinalSellPrice</div>
                                                                 <div class="prd_amnt_incl_VAT">(@ViewBag.CurrencySymbol@(prices.FinalSellPrice + prices.TaxAmount)<span> inc VAT</span>)</div>
                                                                 if (kitProductMaster.SellPrice != prices.FinalSellPrice)
                                                                 {
