--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -39,7 +39,7 @@
                         <div class="col-md-12 col-lg-12 col-xl-8">
                             @if (Model.Product.SellPrice != null && Model.Product.SellPrice > 0)
                             {
-                                <div class="prd_amnt">@ViewBag.CurrencySymbol@Model.Prices.FinalSellPrice<span> excl VAT</span></div>
+                                <div class="prd_amnt">@ViewBag.CurrencySymbol@Model.Prices.FinalSellPrice</div>
                                 <div class="prd_amnt_incl_VAT">(@ViewBag.CurrencySymbol@(Model.Prices.FinalSellPrice + Model.Prices.TaxAmount)<span> inc VAT</span>)</div>
                                 if (Model.Product.SellPrice != Model.Prices.FinalSellPrice)
                                 {
