--- a/WMS/Views/Theme/Default/Shared/_ProductPopups.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_ProductPopups.cshtml
@@ -254,3 +254,26 @@
         settings.ShowFooter = true;
         settings.FooterText = "";
     }).GetHtml()
+
+@Html.DevExpress().PopupControl(
+    settings =>
+    {
+        settings.Name = "ProductLabelPrintPopup";
+        settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
+        settings.CallbackRouteValues = new { Controller = "Products", Action = "_ProductLabelPrint", Method = "GET" };
+
+        settings.Width = 470;
+        settings.Height = 450;
+        settings.AllowDragging = true;
+        settings.CloseAction = CloseAction.CloseButton;
+        settings.CloseOnEscape = true;
+        settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
+        settings.ShowHeader = false;
+        settings.Modal = true;
+        settings.AutoUpdatePosition = true;
+        settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+        settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+        settings.ScrollBars = System.Web.UI.WebControls.ScrollBars.None;
+        settings.EnableClientSideAPI = true;
+        settings.ClientSideEvents.BeginCallback = "function(s,e){ beginProductLabelPrintCallback(s,e);  }";
+    }).GetHtml()
