--- a/WMS/Views/Theme/Default/Products/Create.cshtml
+++ b/WMS/Views/Theme/Default/Products/Create.cshtml
@@ -672,6 +672,24 @@
                     </div>
                 </div>
             </div>
+
+            @if (ViewBag.IsDeliverectIntegrated)
+            {
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Deliverect PLU", new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.DeliverectPLU)
+                        @Html.ValidationMessageFor(model => model.DeliverectPLU)
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Deliverect ProductId", new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.DeliverectProductId)
+                        @Html.ValidationMessageFor(model => model.DeliverectProductId)
+                    </div>
+                </div>
+            }
             <div class="input-group h-100 justify-content-center align-items-center">
                 <div class="col-md-offset-2 col-md-12 bottom-right">
                     <input type="submit" value="Save" class="btn btn-primary" />
