--- a/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
@@ -232,6 +232,15 @@
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.Label("Is Internal Website", htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.IsInternalWebsite)
+                        @Html.ValidationMessageFor(model => model.IsInternalWebsite, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
                     <div class="checkbox">
