--- a/WMS/Views/Theme/Default/PurchaseOrders/Edit.cshtml
+++ b/WMS/Views/Theme/Default/PurchaseOrders/Edit.cshtml
@@ -175,7 +175,7 @@
                 <div>
                     <div class="col-11 p-0 mt-1 pull-left">
 
-                        @Html.DropDownListFor(model => model.BaseOrderID, ViewBag.DirectOrderList as SelectList, "Select Orders", new { @class = "chosen-select" })
+                        @Html.DropDownListFor(model => model.BaseOrderID, ViewBag.DirectOrderList as SelectList, "Select Orders", new { @class = "chosen-select", @id = "DirectShipOrders" })
                     </div>
                     <div class="col-1 p-0 pull-left">
                         <a href="javascript:;" onclick="GetOrderDetail();" id="AccountAddress" class="btn btn-primary"><i class="fa fa-circle-o-notch" style="font-size:24px"></i></a>
