--- a/WMS/Views/Theme/Default/ProductLocations/Index.cshtml
+++ b/WMS/Views/Theme/Default/ProductLocations/Index.cshtml
@@ -72,7 +72,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model.ProductLocationsMap)
+                    @foreach (var item in Model.ProductLocations)
                     {
                         <tr>
                             <td>
