--- a/WMS/Views/Theme/Default/OrderSchedule/Index.cshtml
+++ b/WMS/Views/Theme/Default/OrderSchedule/Index.cshtml
@@ -21,64 +21,32 @@
                 new Script { ExtensionType = ExtensionType.DateEdit }
                 )
 }
-    <script>
-
-    // mouse refresh flag
-    var mouseRefresh = 0;
-    $(function () {
-        //JobsAccordian();
-        //// save refresh time on page load
-        //$.cookie('JobsRefreshTime', new Date(), { path: '/' });
-
-        ////check on mouse move if user was idle for more then 30 seconds then refresh page
-        //$("#Scheduler").mousemove(function (event) {
-        //    var preDateTime = $.cookie('JobsRefreshTime');
-        //    var diffMSeconds = new Date().getTime() - new Date(preDateTime).getTime();
-        //    if (diffMSeconds > 30000 && mouseRefresh <= 0) {
-        //        mouseRefresh = 1;
-        //        Scheduler.Refresh();
-        //    }
-        //});
-
-    });
-
-    function JobsAccordian() {
-        var act = 0;
-        $("#works-jobs").accordion({
-            create: function (event, ui) {
-                //get index in cookie on accordion create event
-                if ($.cookie('jobsh_index') != null) {
-                    act = $.cookie('jobsh_index');
-                    //alert($.cookie('saved_index'));
-                }
-            },
-            activate: function (event, ui) {
-                //set cookie for current index on change event
-                $.cookie('jobsh_index', null, { path: '/' });
-                var index = jQuery(this).find("h3").index(ui.newHeader[0]);
-                $.cookie('jobsh_index', index, { path: '/' });
-                //alert($.cookie('saved_index'));
-            },
-            active: parseInt($.cookie('jobsh_index')),
-            heightStyle: "content"
-        });
-    }
-
+<script>
     function AjaxCall() {
-       
+        // get scroll values of divs and store in cookies
+        $.cookie('JobsByTradeScrolly', $("#JobsByTrade").scrollTop(), { path: '/' });
+        $.cookie('JobsByPriorityScrolly', $("#JobsByPriority").scrollTop(), { path: '/' });
+        //set last refresh time in Cookie
+        $.cookie('JobsRefreshTime', new Date(), { path: '/' });
+
+
         $.ajax({
-            url: '@Url.Action("_PalletToDispatch")',
+            url: '@Url.Action("_OrdersToSchedule")',
             type: 'GET',
             cache: false
         }).done(function (result) {
             $('#DynamicRefresh').html("");
             $('#DynamicRefresh').html(result);
-            $("#JobTabs").tabs({ active: 'ByTrade' });
-            $("#JobTabs").on("tabsactivate", function (event, ui) { $.cookie('ActiveJobTabsId', 'ByTrade'); });
+            $("#JobTabs").tabs({ active: $.cookie('ActiveJobTabsId') });
+            $("#JobTabs").on("tabsactivate", function (event, ui) { $.cookie('ActiveJobTabsId', ui.newTab.index(), { path: '/' }); });
+            // preserve scroll position
+            $("#JobsByTrade").scrollTop($.cookie('JobsByTradeScrolly'));
+            $("#JobsByPriority").scrollTop($.cookie('JobsByPriorityScrolly'));
             $(".draggable").draggable({ helper: 'clone', appendTo: 'body', zIndex: 100, cursor: "pointer" });
         });
 
-        
+        // reset Mouse Refresh flag
+        mouseRefresh = 0;
     }
 
     function OnAppointmentDeleting(s, e) {
@@ -89,73 +57,43 @@
         AjaxCall();
     }
 
+    function OnAppointmentEventsClick(s, e) {
 
-
-  function OnAppointmentEventsClick(s, e) {
-        @*var appointmentId = e.appointmentId;
-        var $link = $("a#WorksOrderReportLink");
-
-        if ($link.length < 1) {
-            var $link = $("<a id='WorksOrderReportLink' class='btn btn-default pull-right p-1' target='_blank' hreftemp='@Url.Action("PrintWorksOrderByAppointment", "WorksOrders", new {id = "APPTID"})' href='@Url.Action("PrintWorksOrderByAppointment", "WorksOrders", new {id = "APPTID"})'>Print Order</a>");
-            var url = $link.attr("hreftemp");
-            url = url.replace('APPTID', appointmentId);
-            $link.attr("href", url);
-            $(".main-left h2:eq(0)").append($link);
-        } else {
-            var url = $link.attr("hreftemp");
-            url = url.replace('APPTID', appointmentId);
-            $link.attr("href", url);
-        }*@
-    }
-
-    function PrintWorksOrderByAppointmentId(appointmentId) {
-        var url = '@Url.Action("PrintWorksOrderByAppointment", "WorksOrders", new {id = "APPTID"})';
-        url = url.replace('APPTID', appointmentId);
-        location.href = url;
     }
 
     function SelectedValueChanged() {
         Scheduler.Refresh();
     }
 
-    function UASelectedValueChanged() {
-     
-    }
-
-    function RASelectedValueChanged() {
-     
-    }
-
-
-
     function OnBeginCallback(s, e) {
-       
+
     }
 
-    </script>
-<h2><span>Order Scheduler</span></h2>
+</script>
 
+<style>
+    .dxscApt .dxsc-apt-bg {
+        opacity: .6;
+    } 
+</style>
+
+<h2><span>Order Scheduler</span></h2>
+<div class="col-md-12 p-0 legend-pane">
+    <p class="pull-left" style="text-align:left;margin-bottom:0px"><label style="height:12px;width:24px;background-color:#fbfb91;vertical-align:middle"></label> Placed Sales Order</p>
+    <p class="pull-left" style="text-align:left;margin-bottom:0px"><label style="height:12px;width:24px;background-color:#fedd78;vertical-align:middle"></label>  Picked Sales Order </p>
+    <p class="pull-left" style="text-align:left;margin-bottom:0px"><label style="height:12px;width:24px;background-color:#E0E0E0;vertical-align:middle"></label>  Dispatched Sales Order </p>
+    <p class="pull-left" style="text-align:left;margin-bottom:0px"><label style="height:12px;width:24px;background-color:#b0f797;vertical-align:middle"></label>  Purchase Order </p>
+    <div class="clearfix"></div>
+</div>
 <div id="tabs" style="visibility: hidden">
     <ul>
         <li><a href="#Scheduler">Scheduler</a></li>
     </ul>
     <div id="Scheduler">
         <div id="DynamicRefresh" class="col-md-4 pull-left">
-            @Html.Action("_PalletToDispatch")
+            @Html.Action("_OrdersToSchedule")
         </div>
         <div class="col-md-8 p-0 pull-left">
-            @*<div class="col-md-12 report-date-header">
-                    <div class="input-group h-100 justify-content-center align-items-center">
-                        <div class="col-md-12 text-center">
-                            <div class="input-group h-100 justify-content-center align-items-center">
-                                @Html.Label("Filter By Job Type", htmlAttributes: new { @class = "col-md-5" })
-                                <div class="col-md-7">
-                                    @Html.DropDownList("JobTypeId", ViewBag.ResourcejobTypes as IEnumerable<SelectListItem>, new { @class = "chosen-select", onchange = @"SelectedValueChanged();" })
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>*@
             <div class="droppable col-md-12 p-0">
                 @Html.Action("SchedulerPartial")
             </div>
